--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -5,6 +5,7 @@ Author Name
 :!example-caption:
 :!table-caption:
 :page-pagination:
+:experimental:
 
 image:multirepo-ssg.svg[Multirepo SSG,200,float=right]
 Platonem complectitur mediocritatem ea eos.
@@ -132,6 +133,8 @@ Ea mea agam graeci philosophia.
 
 * [ ] todo
 * [x] done!
+
+Showing a gear icon: icon:gear[]
 
 Vis veri graeci legimus ad.
 
