Update color scheme and docs to ESMF

--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,9 @@
-= OMP Default UI (forked from Antora Default UI)
+= ESMF UI (forked from Antora Default UI)
 // Settings:
 :experimental:
 :hide-uri-scheme:
-// OMP SDS Default UI URLS:
-:url-omp-ui-project: https://github.com/OpenManufacturingPlatform/sds-antora-ui.git
+// ESMF UI URLS:
+:url-esmf-ui-project: https://github.com/eclipse-esmf/esmf-antora-ui.git
 // Antora Default UI URLs:
 :url-project: https://gitlab.com/antora/antora-ui-default
 :url-preview: https://antora.gitlab.io/antora-ui-default
@@ -20,26 +20,22 @@
 :url-nvm-install: {url-nvm}#installation
 :url-source-maps: https://developer.mozilla.org/en-US/docs/Tools/Debugger/How_to/Use_a_source_map
 
-This project is an UI bundle implementing the style guide of the OMP (Open Manufacturing Platform). One can use the bundle to generate OMP styled documentation sites with {url-antora}[Antora].
-This OMP UI bundle is a customized fork of the {url-project}[Antora Default UI] project. Both projects are licensed under the MPL 2.0.
-The OMP Default UI bundle was initially created for generating documentations of the OMP SDS WG (Open Manufacturing Semantic Data Structuring Working Group) but can also be used by other OMP WGs and projects.
+This project is an UI bundle implementing the style of the Eclipse Semantic
+Modeling Framework (ESMF). One can use the bundle to generate ESMF styled documentation sites with {url-antora}[Antora].
+This ESMF UI bundle is a customized fork of the {url-project}[Antora Default UI] project. Both projects are licensed under the MPL 2.0.
 
 ////
-== Use the OMP SDS UI
+== Use the ESMF UI
 
-If you want to simply use the default UI for your Antora-generated site, add the following UI configuration to your playbook:
+If you want to simply use the ESMF UI for your Antora-generated site, add the following UI configuration to your playbook:
 
 [source,yaml]
 ----
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+    url: https://github.com/eclipse-esmf/esmf-antora-ui/releases/download/v1.2.0/esmf-antora-ui-bundle-1.2.0.zip
     snapshot: true
 ----
-
-NOTE: The `snapshot` flag tells Antora to fetch the UI when the `--fetch` command-line flag is present.
-This setting is required because updates to the UI bundle are pushed to the same URL.
-If the URL were to be unique, this setting would not be required.
 
 Read on to learn how to customize the default UI for your own documentation.
 
@@ -120,10 +116,10 @@ Now that you have the prerequisites installed, you can fetch and build the UI pr
 Clone the default UI project using git:
 
 [subs=attributes+]
- $ git clone {url-omp-ui-project} &&
+ $ git clone {url-esmf-ui-project} &&
    cd "`basename $_`"
 
-The example above clones the OMP SDS default UI project and then switches to the project folder on your filesystem.
+The example above clones the ESMF UI project and then switches to the project folder on your filesystem.
 Stay in this project folder when executing all subsequent commands.
 
 Use npm to install the project's dependencies inside the project.
@@ -202,9 +198,9 @@ In this case, the bundle will include the source maps, which can be used for deb
 
 == Copyright and License
 
-Copyright (C) 2020 - 2021 Robert Bosch Manufacturing Solutions GmbH
+Copyright (C) 2020 - 2023 Robert Bosch Manufacturing Solutions GmbH
 
-and 
+and
 
 Copyright (C) 2017-2021 OpenDevise Inc. and the Antora Project.
 
@@ -214,12 +210,12 @@ See link:LICENSE[] to find the full license text.
 The content in this project is a customized fork from {url-project}[Antora Default UI] which is developed by OpenDevise Inc. and the Antora Project. The fork is based on the commit with the id 64b526ba9fcd22d6c37dc834126a41c65cbbbe1d dated 04.01.2021.
 
 
-== OMP specific changes
+== ESMF specific changes
 
-In comparision, to the Antora Default UI this fork applies the following changes:
+In comparison, to the Antora Default UI this fork applies the following changes:
 
-* add and apply OMP specific fonts
-* change colors in accordance to OMP color scheme
+* add and apply ESMF specific fonts
+* change colors in accordance to ESMF color scheme
 * adapt Readme
 * add RDF/Turtle syntax highlighting
 * disable JavaScript linting
@@ -232,4 +228,4 @@ In comparision, to the Antora Default UI this fork applies the following changes
 
 Development of Antora is led and sponsored by {url-opendevise}[OpenDevise Inc].
 
-The OMP specific adaptations to this OMP Default UI bundle were performed by {url-bci}[Robert Bosch Manufacturing Solutions GmbH].
+The ESMF specific adaptations to this ESMF UI bundle were performed by {url-bci}[Robert Bosch Manufacturing Solutions GmbH].
